# Power

./: CMakeLists.txt
src/: main.cc
src/board/: board.cc  board.hh  force.cc  force.hh  move_gen.cc  move_gen.hh  tile.cc  tile.hh
src/player/: player.cc  player.hh  team.hh
